cambios mayores en toda la web

--- a/faq.html
+++ b/faq.html
@@ -9,12 +9,16 @@
     <title>"Todo Vapor Store | FAQ"</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/todovaporstore.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/nivo-lightbox.css">
+    <link rel="stylesheet" href="css/nivo_themes/default/default.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'> 
 </head>
 <body>
 
-    <header class="backg">
+    <header>
             <div>
                 <h1 class="pagesubname"> Preguntas Frecuentes</h1>             
             </div>
@@ -56,8 +60,8 @@
                 </div>
               </nav>
         </header>
-
-<!--- Acordeón de preguntas --->
+<!---
+Acordeón de preguntas
 <section class="questions">
 <div class="accordion accordion-flush" id="accordionFlushExample">
   <div class="accordion-item">
@@ -92,7 +96,7 @@
   </div>
 </div>
 
-<!--- Formulario --->
+Formulario
 <div class="wrapper">
   <div class="title">
     ¡Déjanos tu consulta!
@@ -119,12 +123,12 @@
         <textarea class="textarea"></textarea>
      </div>        
     <div class="inputfield">
-      <input type="submit" value="Register" class="btn">
+      <input type="submit" value="Enviar" class="btn">
     </div>
   </div>
 </div>	
 </section>
-
+---->
 <!--- Preguntas --->
     <section class="questions">
       <div>
