--- a/productos.html
+++ b/productos.html
@@ -65,9 +65,9 @@
             <img src="imagenes/new1.png" alt="">
         </div>
         <div class="info">
-            <h3 class="title">Producto 1 </h3>
+            <h3 class="title">DIGIFLAVOR SIREN G MTL TANK </h3>
             <div class="subInfo">
-                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="price"> 6,500ARS/- <span>8,000ARS/-</span></div>
                 <div class="stars">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -88,9 +88,9 @@
         <img src="imagenes/new2.png" alt="">
     </div>
     <div class="info">
-        <h3 class="title">Producto 2 </h3>
+        <h3 class="title">GEEK VAPE L200 AEGIS LEGEND 2 200W STARTER KIT </h3>
         <div class="subInfo">
-            <div class="price"> 100USD/- <span>1400USD/-</span></div>
+            <div class="price"> 10,000ARS/- <span>12,000ARS/-</span></div>
             <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -111,9 +111,9 @@
             <img src="imagenes/new3.png" alt="">
         </div>
         <div class="info">
-            <h3 class="title">Producto 3 </h3>
+            <h3 class="title">GEEK VAPE OBELISK C SUB-OHM TANK </h3>
             <div class="subInfo">
-                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="price"> 5,500ARS/- <span>7,000ARS/-</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -134,9 +134,9 @@
             <img src="imagenes/mods.png" alt="">
         </div>
         <div class="info">
-            <h3 class="title">SMOK TFV18 SUB-OHM TANK </h3>
+            <h3 class="title">VOOPOO DRAG X PRO 100W STARTER KIT</h3>
             <div class="subInfo">
-                <div class="price"> 25USD/- <span>1400USD/-</span></div>
+                <div class="price"> 8,000ARS/- <span>14,000ARS/-</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -157,9 +157,9 @@
             <img src="imagenes/mods1.png" alt="">
         </div>
         <div class="info">
-            <h3 class="title">Producto 5 </h3>
+            <h3 class="title">LOST VAPE THELEMA QUEST 200W STARTER KIT</h3>
             <div class="subInfo">
-                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="price"> 10,000ARS/- <span>11,000ARS/-</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -180,9 +180,9 @@
             <img src="imagenes/mods2.png" alt="">
         </div>
         <div class="info">
-            <h3 class="title">Producto 6 </h3>
+            <h3 class="title">GEEK VAPE M100 AEGIS MINI 2 STARTER KIT</h3>
             <div class="subInfo">
-                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="price"> 7,000ARS/- <span>8,500ARS/-</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -203,9 +203,9 @@
             <img src="imagenes/pods.png" alt="">
         </div>
         <div class="info">
-            <h3 class="title">Producto 7 </h3>
+            <h3 class="title">VOOPOO ALPHA ZIP MINI 120W & MAAT TANK STARTER KIT</h3>
             <div class="subInfo">
-                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="price"> 10,000ARS/- <span>14,000ARS/-</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -226,9 +226,9 @@
             <img src="imagenes/pods1.png" alt="">
         </div>
         <div class="info">
-            <h3 class="title">Producto 8 </h3>
+            <h3 class="title">UWELL CALIBURN G 18W POD SYSTEM</h3>
             <div class="subInfo">
-                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="price"> 4,500ARS/- <span>5,200ARS/-</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -249,9 +249,9 @@
             <img src="imagenes/pods2.png" alt="">
         </div>
         <div class="info">
-            <h3 class="title">Producto 9 </h3>
+            <h3 class="title">SMOK NORD 4 80W POD KIT</h3>
             <div class="subInfo">
-                <div class="price"> 100USD/- <span>1400USD/-</span></div>
+                <div class="price"> 5,000ARS/- <span>7,000ARS/-</span></div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
