--- a/tutoriales.html
+++ b/tutoriales.html
@@ -77,28 +77,41 @@
 <!--- Articulos --->
 <div class="container-content">
     <article>
-      <h1>Titulo #1</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa repellat veritatis, modi qui dignissimos exercitationem corrupti unde minus aspernatur dolorum ipsum consequuntur laboriosam maxime soluta quos reprehenderit cupiditate! Iusto, quia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse placeat dignissimos eos in doloribus magni a ratione optio rem officia repellat quam ullam est excepturi laudantium enim hic, cum impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus molestiae suscipit qui odit totam! Officiis iste nisi animi voluptates voluptatum! Illum fugiat consectetur veniam labore libero dicta voluptas accusantium similique.</p>
+      <h1>¿Qué es el cigarrillo electrónico?</h1>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga natus ratione iusto sit ipsum explicabo quos adipisci nisi similique aliquam possimus eius quod consectetur ad a, quae pariatur unde eveniet. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, tempora dolor autem quas perferendis ad fugit sit eligendi dignissimos eos, dolores assumenda error unde sapiente vitae dicta quibusdam quos? Alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab minus eum optio! Velit odit officia soluta, commodi nostrum quae, cupiditate corrupti hic ab perferendis quasi obcaecati architecto labore ipsam! Fugiat.</p>
+      <p>El Cigarrillo Electrónico es un dispositivo compuesto por: una bateria, un atomizador o un cartucho o boquilla. Cuando la persona inhala en el cigarrillo electrónico, el atomizador se activa vaporizando el liquido contenido en el y luego exhala este vapor simulando la experiencia de fumar.</p>
 
-        <h1>Subtitulo #1</h1>
+      <p>El cigarrillo electrónico, utiliza una tecnología microelectrónica de atomización altamente sensible que permite simular el acto de fumar reduciendo los daños que produce el humo de tabaco. Muchos estudios lo demuestran, utilizándose libremente en Estados Unidos y Europa.</p>
 
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, totam reprehenderit est necessitatibus ducimus facere accusamus neque dicta magni, consequuntur, amet expedita voluptas asperiores animi nobis? Aperiam quod sunt natus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et qui consectetur nihil reiciendis error doloribus ducimus. Nesciunt pariatur culpa necessitatibus alias omnis corporis sint reprehenderit sit saepe! Sed, error iusto!</p>
+      <h1>¿Que contienen los cartuchos y los líquidos?</h1>
 
-        <img src="imagenes/liquido1.png" atl="">
+      <p>Los componentes básicos son: Glicerina vegetal (Glicerol) o propilenglicol, esencias y eventualmente nicotina en distintos grados, para controlar el síndrome de abstinencia del fumador.  Pueden también utilizarse cartuchos o líquidos sin nicotina.</p>
 
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad rerum neque quas voluptatum dignissimos consequatur odio magnam dicta nulla et, eligendi, vitae facere deserunt ratione dolorum facilis beatae? Reiciendis, dicta.</p>
+      <img src="imagenes/liquido1.png" atl="">
+
+      <h1>¿Por qúe el vapeo está sufriendo un asedio sin precedentes?</h1>
+
+      <p>Numerosos artículos relativos a la crisis sanitaria en EEUU están siendo publicados en todos los países, y la línea de la gran mayoría de ellos es demonizar al vapeo y sembrar el pánico en la población. Declaraciones seleccionadas y articuladas a conveniencia introducen la semilla de la duda y la desconfianza en una sociedad desinformada, generan miedo y manipulan la opinión pública para contribuir a la demonización de una herramienta de reducción de daños que está salvando vidas. Tanto la prensa como las sociedades y autoridades relacionadas con la salud pública tienen un rol muy activo en esta maquinaria genocida que, como ya se vivió en 2014 en España con el caso de la falsa neumonía lipoidea, tendrá como resultado la estigmatización del vapeo, la perpetuación del hábito en fumadores que podrían haberlo considerado como una alternativa y la vuelta al tabaco de muchos ex-fumadores que ya habían encontrado una herramienta capaz de alejarles del mortal hábito de fumar. En definitiva, costarán vidas.</p>
+
+      <p>Hemos estado siguiendo los recientes desarrollos y anuncios en los EEUU sobre los serios y agudos casos de fallo respiratorio, los cuales han sido presentados como “relacionados con el vapeo”. No sería una hipérbole caracterizar las reacciones, anuncios y declaraciones de algunas autoridades, reguladores y científicos como histéricas. No hay duda de que son emocionales, imprecisas y sin ninguna base científica ni epidemiológica. Casi todas las declaraciones, sean de organizaciones de la salud o de autoridades sanitarias locales, se refieren a los casos como “relacionados con el vapeo”. En ninguna declaración hacen mención en el título de que muchos casos han sido confirmados (y otros están simplemente sin confirmar aún) como casos relacionados con el uso de cannabis (y/o THC) inhalado a través de un dispositivo con batería-y-resistencia (p.e. un dispositivo como el cigarrillo electrónico). En ninguna declaración mencionan que los casos están, de hecho, relacionados con el THC/Cannabis y no con el vapeo. Empecemos por lo básico.</p>
         
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad rerum neque quas voluptatum dignissimos consequatur odio magnam dicta nulla et, eligendi, vitae facere deserunt ratione dolorum facilis beatae? Reiciendis, dicta.</p>
+      <h1>¿Los cigarrillos electrónicos deben ser dañinos ya que contienen nicotina?</h1>
 
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad rerum neque quas voluptatum dignissimos consequatur odio magnam dicta nulla et, eligendi, vitae facere deserunt ratione dolorum facilis beatae? Reiciendis, dicta.</p>
+      <p>Cuatro de cada 10 fumadores y exfumadores piensan erróneamente que la nicotina causa la mayor parte del cáncer relacionado con el consumo de tabaco, cuando la evidencia muestra que la nicotina en realidad conlleva un riesgo mínimo de daño a la salud. Aunque la nicotina es la razón por la cual las personas se vuelven adictas al tabaco, son los miles de otros químicos contenidos en el humo del cigarrillo los que causan casi todo el daño.</p>
+
+      <p>El vapor del cigarrillo electrónico no contiene alquitrán ni monóxido de carbono, dos de los elementos más dañinos en el humo del tabaco. Contiene algunos químicos que también se encuentran en el humo del tabaco, pero a niveles mucho más bajos. Con lo cual el riesgo no desaparece pero, según la evidencia disponible, se reduce considerablemente.</p>
+
+      <h1>¿La exposición al vapor del cigarrillo electrónico es perjudicial para terceros?</h1>
+
+      <p>La evidencia es clara de que la exposición al humo de segunda mano es perjudicial, por lo que el Reino Unido tiene leyes que prohíben fumar en lugares públicos y lugares de trabajo cerrados. Estas leyes no cubren el vapeo y las organizaciones son libres de hacer sus propias políticas sobre el uso de cigarrillos electrónicos en sus instalaciones.</p>
+
+      <p>El líquido del cigarrillo electrónico se compone típicamente de nicotina, propilenglicol y / o glicerina, y aromatizantes. A diferencia de los cigarrillos, no hay vapor lateral emitido por un cigarrillo electrónico a la atmósfera, solo el aerosol exhalado.</p>
+
+      <p>La revisión de evidencia de PHE de 2018 encontró que hasta la fecha, no se han identificado riesgos de salud de vapeo pasivo para la salud de terceros. Las personas con asma y otras afecciones respiratorias pueden ser sensibles a una variedad de irritantes ambientales, así como al polen y al aire frío, y PHE aconseja a las organizaciones que tengan esto en cuenta y que hagan ajustes cuando sea apropiado, al hacer sus propias políticas sobre el uso de e -cigarrillos</p>
     </article>
 </div>
 
-
-
-<!--  Footer -->
+<!---  Footer --->
 <footer class="footer">
   <div class="footer_container">
       <div class="footer-row">
