--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,12 @@
     <title>"Todo Vapor Store | Contacto"</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/todovaporstore.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/nivo-lightbox.css">
+    <link rel="stylesheet" href="css/nivo_themes/default/default.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'> 
 </head>
 <body>
     <header class="backg">
@@ -96,22 +101,23 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo, deserunt adipisci non omnis distinctio ipsum veritatis dolores. Aliquam animi natus amet incidunt dolor voluptatem magni at accusamus autem maiores.</p>
   </div>
   <div class="container">
-      <div class="contactinfo">
-          <div class="box">
+      <div class="contactInfo">
+          <div class="box1">
               <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
               <div class="text">
                   <h3>Dirección</h3>
-                  <p>ajsdajksdkjasksajdkas</p>
+                  <p>Vera 832, C1414 AOR, Buenos Aires</p>
+                  <!-- <iframe class="footer__img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3187903021512!2d-58.44277018491992!3d-34.596099480461504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0acea50687%3A0x3509fb30ddfbf352!2sVera%20832%2C%20C1414%20AOR%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1627426875196!5m2!1sen!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
               </div>                
           </div>
-          <div class="box">
+          <div class="box1">
               <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
               <div class="text">
                   <h3>Teléfono</h3>
                   <p>(11)123456789</p>
               </div>                
           </div>
-          <div class="box">
+          <div class="box1">
               <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
               <div class="text">
                   <h3>Email</h3>
@@ -142,40 +148,41 @@
   </div>
 </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   <footer class="footer"> 
-    <div class="footer__box">
-      <h2 class="footer__sub-2">Soporte</h2>
-    </div>
-    <div class="footer__box">
-          <div class="footer__box__component">               
-              <h3 class="footer__sub-3">¡Nuestra Sucursal!</h3>
-                <img class="footer__img" src="imagenes/sucursal-2.jpg" width="500" height="350" alt="Sucursal1" >
+<!--  Footer -->
+<footer class="footer">
+  <div class="footer_container">
+      <div class="footer-row">
+          <div class="footer-col">
+              <h4>Nuestros Productos</h4>
+              <ul>
+                  <li><a href="#">Todos</a></li>
+                  <li><a href="#">Más vendidos</a></li>
+                  <li><a href="#">Nuevos</a></li>
+                  <li><a href="#">Ofertas</a></li>
+                  <li><a href="#">Destacados</a></li>
+              </ul>
           </div>
-          <div class="footer__box__component">
-              <h3 class="footer__sub-3">Nuestra Dirección</h3>
-                  <iframe class="footer__img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3187903021512!2d-58.44277018491992!3d-34.596099480461504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca0acea50687%3A0x3509fb30ddfbf352!2sVera%20832%2C%20C1414%20AOR%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1627426875196!5m2!1sen!2sar" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-              <h3 class="footer__sub-3-1">Visítanos</h3>
+          <div class="footer-col">
+              <h4>¿Necesitas ayuda?</h4>
+            <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Garantía</a></li>
+                <li><a href="#">Métodos de Pago</a></li>
+                <li><a href="#">Envío</a></li>
+            </ul>
           </div>
-    </div>
-    <div class="footer__redes">
-        <a href="https://www.facebook.com/" class="fa fa-facebook" target="blank"></a>
-        <a href="https://www.instagram.com" class="fa fa-instagram" target="blank"></a>
-    </div>
-  </footer>
+          <div class="footer-col">
+              <h4>Síguenos</h4>
+              <div class="social-links">                
+                  <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                  <a href="https://twitter.com/home"><i class="fab fa-twitter"></i></a>
+                  <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>          
+                                   
+              </div>
+          </div>
+      </div>
+  </div>
+</footer>
 <script src="js/bootstrap.bundle.min.js"></script>  
 </body>
 </html>
