--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title> "Todo Vapor Store | Inicio"</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/todovaporstore.css">
-<!--     <link rel="stylesheet" href="css/animate.min.css"> -->
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-<!--    <link rel="stylesheet" href="css/nivo-lightbox.css"> -->
-<!--    <link rel="stylesheet" href="css/nivo_themes/default/default.css"> -->
+    <link rel="stylesheet" href="css/nivo-lightbox.css">
+    <link rel="stylesheet" href="css/nivo_themes/default/default.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'> 
 </head>
