cambios en el footer

--- a/index.html
+++ b/index.html
@@ -96,22 +96,17 @@
     <div class="footer_container">
         <div class="footer-row">
             <div class="footer-col">
-                <h4>Nuestros Productos</h4>
-                <ul>
-                    <li><a href="#">Todos</a></li>
-                    <li><a href="#">Más vendidos</a></li>
-                    <li><a href="#">Nuevos</a></li>
-                    <li><a href="#">Ofertas</a></li>
-                    <li><a href="#">Destacados</a></li>
-                </ul>
+                <h4>Sobre Nosotros</h4>
+                <p>Tienda virtual en Argentina de artículos para vapeo, venta de vaporizadores, respuestos, líquidos, accesorios, y más.</p>
             </div>
             <div class="footer-col">
-                <h4>¿Necesitas ayuda?</h4>
+                <h4>Acceso Rápido</h4>
               <ul>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Garantía</a></li>
-                  <li><a href="#">Métodos de Pago</a></li>
-                  <li><a href="#">Envío</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="productos.html">Productos</a></li>
+                  <li><a href="tutoriales.html">Información</a></li>
+                  <li><a href="contacto.html">Contacto</a></li>
+                  <li><a href="faq.html">FAQ</a></li>
               </ul>
             </div>
             <div class="footer-col">
