--- a/tutoriales.html
+++ b/tutoriales.html
@@ -55,27 +55,8 @@
           </nav>
     </header>
 
-<!---
-<div class="grid-container">  
-    <h2 class="caja titulo">Conceptos Básicos</h2>
-      <div class="caja mobile"> <iframe width="560" height="315" src="https://www.youtube.com/embed/7gVvymQHj9g?list=PLlYBg_HwfKoAZXYfWfEcBfzH5auR_90DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
-      <div class="caja"> <iframe width="560" height="315" src="https://www.youtube.com/embed/Z3OyxEkO9Dw?list=PLlYBg_HwfKoAZXYfWfEcBfzH5auR_90DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
-      <div class="caja"> <iframe width="560" height="315" src="https://www.youtube.com/embed/FBWuvCGxat8?list=PLlYBg_HwfKoAZXYfWfEcBfzH5auR_90DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
-      <div class="caja"> <img src="imagenes/Progress.jpg" alt="Logo" width="200" height="200"> </div>
-    <h2 class="caja titulo2">Reseñas y reviews</h2>
-      <div class="caja"> <iframe width="560" height="315" src="https://www.youtube.com/embed/ZFpAv_kHpr0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-      <div class="caja"> <iframe width="560" height="315" src="https://www.youtube.com/embed/VuJAcLouJdI?list=PLlYBg_HwfKoDBAJAidOfhZmJ_38nQqlug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
-      <div class="caja"> <iframe width="560" height="315" src="https://www.youtube.com/embed/Jpnuoasop_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
-      <div class="caja"> <img src="imagenes/Progress.jpg" alt="Logo" width="200" height="200"> </div>
-    <h2 class="caja titulo3">Líquidos, aromas y sabores</h2>
-      <div class="caja"> <iframe width="560" height="315" src="https://www.youtube.com/embed/ZvdZ8z-hzqo?list=PLlYBg_HwfKoAK9kecbzNVP8nhrB6JNOQV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
-      <div class="caja"> <iframe width="560" height="315" src="https://www.youtube.com/embed/PkD_tOms_m8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
-      <div class="caja"> <iframe width="560" height="315" src="https://www.youtube.com/embed/oG4zooJWBtk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
-      <div class="caja"> <img src="imagenes/Progress.jpg" alt="Logo" width="200" height="200"> </div>
-</div>
---->
 <!--- Articulos --->
-<div class="container-content">
+<div class="info-container">
     <article>
       <h1>¿Qué es el cigarrillo electrónico?</h1>
 
@@ -111,27 +92,22 @@
     </article>
 </div>
 
-<!---  Footer --->
+<!--  Footer -->
 <footer class="footer">
   <div class="footer_container">
       <div class="footer-row">
           <div class="footer-col">
-              <h4>Nuestros Productos</h4>
-              <ul>
-                  <li><a href="#">Todos</a></li>
-                  <li><a href="#">Más vendidos</a></li>
-                  <li><a href="#">Nuevos</a></li>
-                  <li><a href="#">Ofertas</a></li>
-                  <li><a href="#">Destacados</a></li>
-              </ul>
+              <h4>Sobre Nosotros</h4>
+              <p>Tienda virtual en Argentina de artículos para vapeo, venta de vaporizadores, respuestos, líquidos, accesorios, y más.</p>
           </div>
           <div class="footer-col">
-              <h4>¿Necesitas ayuda?</h4>
+              <h4>Acceso Rápido</h4>
             <ul>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Garantía</a></li>
-                <li><a href="#">Métodos de Pago</a></li>
-                <li><a href="#">Envío</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="tutoriales.html">Información</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
           </div>
           <div class="footer-col">
