--- a/contacto.html
+++ b/contacto.html
@@ -98,7 +98,7 @@
 <section class="contact">
   <div class="content">
       <h2>Contactanos</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo, deserunt adipisci non omnis distinctio ipsum veritatis dolores. Aliquam animi natus amet incidunt dolor voluptatem magni at accusamus autem maiores.</p>
+      <p>¿Tienes dudas? Llena los campos del formulario para enviarnos un mensaje o contáctanos por WhatsApp o correo el electrónico.</p>
   </div>
   <div class="container">
       <div class="contactInfo">
@@ -111,17 +111,17 @@
               </div>                
           </div>
           <div class="box1">
-              <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+              <div class="icon"><i class="fab fa-whatsapp" aria-hidden="true"></i></div>
               <div class="text">
                   <h3>Teléfono</h3>
                   <p>(11)123456789</p>
               </div>                
           </div>
           <div class="box1">
-              <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
+              <div class="icon"><i class="far fa-envelope" aria-hidden="true"></i></div>
               <div class="text">
                   <h3>Email</h3>
-                  <p>correo@.com</p>
+                  <p>nuestro@correo.com</p>
               </div>                
           </div>
       </div>
@@ -153,22 +153,17 @@
   <div class="footer_container">
       <div class="footer-row">
           <div class="footer-col">
-              <h4>Nuestros Productos</h4>
-              <ul>
-                  <li><a href="#">Todos</a></li>
-                  <li><a href="#">Más vendidos</a></li>
-                  <li><a href="#">Nuevos</a></li>
-                  <li><a href="#">Ofertas</a></li>
-                  <li><a href="#">Destacados</a></li>
-              </ul>
+              <h4>Sobre Nosotros</h4>
+              <p>Tienda virtual en Argentina de artículos para vapeo, venta de vaporizadores, respuestos, líquidos, accesorios, y más.</p>
           </div>
           <div class="footer-col">
-              <h4>¿Necesitas ayuda?</h4>
+              <h4>Acceso Rápido</h4>
             <ul>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Garantía</a></li>
-                <li><a href="#">Métodos de Pago</a></li>
-                <li><a href="#">Envío</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="tutoriales.html">Información</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
           </div>
           <div class="footer-col">
