--- a/productos.html
+++ b/productos.html
@@ -13,11 +13,10 @@
 </head>
 
 <body>
-    <header class="backg">
+    <header>
         <div>
-            <h1  class="pagesubname"> Nuestro catálogo de productos</h1>                    
+            <h1  class="pagesubname">Productos</h1>                    
         </div>   
-
 <!-- Navigation bar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -59,7 +58,7 @@
     </header>
 
 <!--- Product Pictures --->
-<div class="box-container">
+<div class="product-container">
     <div class="box">
         <div class="image"> 
             <img src="imagenes/new1.png" alt="">
@@ -297,35 +296,30 @@
         </div>
     </div>
     ------------------------------------------->
-<!--- Footer --->
+<!--  Footer -->
 <footer class="footer">
     <div class="footer_container">
         <div class="footer-row">
             <div class="footer-col">
-                <h4>Nuestros Productos</h4>
-                <ul>
-                    <li><a href="#">Todos</a></li>
-                    <li><a href="#">Más vendidos</a></li>
-                    <li><a href="#">Nuevos</a></li>
-                    <li><a href="#">Ofertas</a></li>
-                    <li><a href="#">Destacados</a></li>
-                </ul>
+                <h4>Sobre Nosotros</h4>
+                <p>Tienda virtual en Argentina de artículos para vapeo, venta de vaporizadores, respuestos, líquidos, accesorios, y más.</p>
             </div>
             <div class="footer-col">
-                <h4>¿Necesitas ayuda?</h4>
+                <h4>Acceso Rápido</h4>
               <ul>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Garantía</a></li>
-                  <li><a href="#">Métodos de Pago</a></li>
-                  <li><a href="#">Envío</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="productos.html">Productos</a></li>
+                  <li><a href="tutoriales.html">Información</a></li>
+                  <li><a href="contacto.html">Contacto</a></li>
+                  <li><a href="faq.html">FAQ</a></li>
               </ul>
             </div>
             <div class="footer-col">
                 <h4>Síguenos</h4>
                 <div class="social-links">                
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>          
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/home"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>          
                                      
                 </div>
             </div>
